solved the banner readability

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -7,10 +7,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url(banner.png);
-  border-radius: 25px;
-  width: 1280px;
-  height: 400px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(banner.jpg);
+  background-size: cover;
+  background-position-y: -160px;
+  width: 100%;
+  height: 500px;
   color: white;
 }
 
